--- a/window.ui
+++ b/window.ui
@@ -30,7 +30,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="search">
        <attribute name="title">
@@ -131,6 +131,12 @@
                </item>
                <item>
                 <widget class="QTextEdit" name="filtros">
+                 <property name="maximumSize">
+                  <size>
+                   <width>16777215</width>
+                   <height>25</height>
+                  </size>
+                 </property>
                  <property name="markdown">
                   <string/>
                  </property>
